# DiverseXEngine

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Common.h  Dockerfile  README.md  main.cpp  mainWindow.cpp  mainWindow.h  resources.qrc
BlockSDK/: Common.h
BlockSDK/Node/: Graphics.cpp  Graphics.h  Node.cpp  Node.h  NodeGraphics.cpp  NodeGraphics.h  Widget.cpp  Widget.h
BlockSDK/Node/Edges/: Graphics.cpp  Graphics.h  NodeEdgs.cpp  NodeEdgs.h
BlockSDK/Node/Graphics/: Graphics.cpp  Graphics.h
BlockSDK/Node/Socket/: Graphics.cpp  Graphics.h  Socket.cpp  Socket.h
BlockSDK/Node/Widget/: Widget.cpp  Widget.h
BlockSDK/Scene/: NodeScene.cpp  NodeScene.h
Canvas/Scene/: CanvasScene.cpp  CanvasScene.h
Canvas/View/: CanvasView.cpp  CanvasView.h  helper.cpp
codebase/: python.json
core/codegeneration/: codeTemplateManager.cpp  codeTemplateManager.h
core/noderegistry/: BitOp.cpp  BitOp.h  Permutation.cpp  Permutation.h  canvasNode.cpp  canvasNode.h  conditionNode.cpp  conditionNode.h  functionNode.cpp  functionNode.h  functions.cpp  inNode.cpp  inoutNode.cpp  inoutNode.h  mathNode.cpp  mathNode.h  noderegister.cpp  noderegister.h  outNode.cpp
core/noderegistry/arithmetic/: mathNode.cpp  mathNode.h
core/noderegistry/bitOps/: BitOp.cpp  BitOp.h
core/noderegistry/function/: conditionNode.cpp  conditionNode.h  functionNode.cpp  functionNode.h  ifElseNode.cpp  ifElseNode.h
core/noderegistry/inout/: constantNode.cpp  constantNode.h  inNode.cpp  inoutNode.h  outNode.cpp  printNode.cpp  printNode.h
core/noderegistry/matrix/: matrixNode.cpp  matrixNode.h
core/noderegistry/permutation/: Permutation.cpp  Permutation.h
core/nodes/: edge.cpp  edge.h  node.cpp  node.h  socket.cpp  socket.h
core/scene/: nodescene.cpp  nodescene.h
core/serialization/: serializator.cpp  serializator.h
core/widgets/: widgets.cpp  widgets.h
examples/: BitOp_example.json  Permutation_exampler.json  arithmatic_example.json  math_example.json  simple_add.json
ui/canvas/: canvasScene.cpp  canvasScene.h  canvasview.cpp  canvasview.h  editorWindow.cpp  editorWindow.h  helper.cpp  load_from.cpp  open_from.cpp  open_load.h  syshighligh.cpp  syshighligh.h
ui/graphics/: InfoButton.cpp  InfoButton.h  canvasNodeGraphis.cpp  canvasNodeGraphis.h  cutlineGraphics.cpp  cutlineGraphics.h  edgeGraphics.cpp  edgeGraphics.h  nodeGraphics.cpp  nodeGraphics.h  socketGraphics.cpp  socketGraphics.h
ui/mainwindow/: mainWindow.cpp  mainWindow.h
